basic html and css styling

--- a/index.html
+++ b/index.html
@@ -4,9 +4,59 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>How complex should credibility visualisations be?</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <div class="header">
+    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png" alt="Google Logo">
+    <input type="text" name="" value="build this webpage">
+    
+  </div>
+
+  <div class="searchTools">
+    <ul class="searchToolOptions">
+      <li class="left active"><a href="#">All</a></li>
+      <li class="left"><a class="searchToolOption" href="#">News</a></li>
+      <li class="left"><a class="searchToolOption" href="#">Videos</a></li>
+      <li class="left"><a class="searchToolOption" href="#">Shopping</a></li>
+      <li class="left"><a class="searchToolOption" href="#">Maps</a></li>
+      <li class="left"><a class="searchToolOption" href="#">More</a></li>
+      <li class="right"><a class="searchToolOption" href="#">Settings</a></li>
+      <li class="right"><a class="searchToolOption" href="#">Tools</a></li>
+    </ul>
+  </div>
+
+  <div class="searchResults">
+    <p class="numberOfResults">About 142,000,000 results (0.48 seconds)</p>
+    <div class="result">
+      <a class="link" href="#">https://...</a>
+      <h2><a href="#">Search Result Title</a></h2>
+      <p><span></span>Description</p>
+    </div>
+    <div class="result">
+      <a class="link" href="#">https://...</a>
+      <h2><a href="#">Search Result Title</a></h2>
+      <p><span></span>Description</p>
+    </div>
+    <div class="result">
+      <a class="link" href="#">https://...</a>
+      <h2><a href="#">Search Result Title</a></h2>
+      <p><span></span>Description</p>
+    </div>
+    <div class="result">
+      <a class="link" href="#">https://...</a>
+      <h2><a href="#">Search Result Title</a></h2>
+      <p><span></span>Description</p>
+    </div>
+    <div class="result">
+      <a class="link" href="#">https://...</a>
+      <h2><a href="#">Search Result Title</a></h2>
+      <p><span></span>Description</p>
+    </div>
+  </div>
+
+  <div class="footer">
+  </div>
 </body>
 </html>
