--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="header">
     <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png" alt="Google Logo">
-    <input type="text" name="" value="build this webpage">
+    <input type="text" name="" value="search query">
     
   </div>
 
@@ -30,29 +30,44 @@
   <div class="searchResults">
     <p class="numberOfResults">About 142,000,000 results (0.48 seconds)</p>
     <div class="result">
-      <a class="link" href="#">https://...</a>
-      <h2><a href="#">Search Result Title</a></h2>
-      <p><span></span>Description</p>
+      <div class="result-item">
+        <a class="link" href="#">https://...</a>
+        <h2><a href="#">Search Result Title</a></h2>
+        <p><span></span>Description</p>
+      </div>
+      <div class="result-visualisation">
+        <img src="/img/test.png" alt="test">
+      </div>
     </div>
     <div class="result">
-      <a class="link" href="#">https://...</a>
-      <h2><a href="#">Search Result Title</a></h2>
-      <p><span></span>Description</p>
+      <div class="result-item">
+        <a class="link" href="#">https://...</a>
+        <h2><a href="#">Search Result Title</a></h2>
+        <p><span></span>Description</p>
+      </div>
+      <div class="result-visualisation">
+        <img src="/img/test.png" alt="test">
+      </div>
     </div>
     <div class="result">
-      <a class="link" href="#">https://...</a>
-      <h2><a href="#">Search Result Title</a></h2>
-      <p><span></span>Description</p>
+      <div class="result-item">
+        <a class="link" href="#">https://...</a>
+        <h2><a href="#">Search Result Title</a></h2>
+        <p><span></span>Description</p>
+      </div>
+      <div class="result-visualisation">
+        <img src="/img/test.png" alt="test">
+      </div>
     </div>
     <div class="result">
-      <a class="link" href="#">https://...</a>
-      <h2><a href="#">Search Result Title</a></h2>
-      <p><span></span>Description</p>
-    </div>
-    <div class="result">
-      <a class="link" href="#">https://...</a>
-      <h2><a href="#">Search Result Title</a></h2>
-      <p><span></span>Description</p>
+      <div class="result-item">
+        <a class="link" href="#">https://...</a>
+        <h2><a href="#">Search Result Title</a></h2>
+        <p><span></span>Description</p>
+      </div>
+      <div class="result-visualisation">
+        <img src="/img/test.png" alt="test">
+      </div>
     </div>
   </div>
 
