Added page for nightingale-rose (prestudy)

--- a/index.html
+++ b/index.html
@@ -5,73 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>How complex should credibility visualisations be?</title>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-  <div class="header">
-    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png" alt="Google Logo">
-    <input type="text" name="" value="search query">
-    
-  </div>
-
-  <div class="searchTools">
-    <ul class="searchToolOptions">
-      <li class="left active"><a href="#">All</a></li>
-      <li class="left"><a class="searchToolOption" href="#">News</a></li>
-      <li class="left"><a class="searchToolOption" href="#">Videos</a></li>
-      <li class="left"><a class="searchToolOption" href="#">Shopping</a></li>
-      <li class="left"><a class="searchToolOption" href="#">Maps</a></li>
-      <li class="left"><a class="searchToolOption" href="#">More</a></li>
-      <li class="right"><a class="searchToolOption" href="#">Settings</a></li>
-      <li class="right"><a class="searchToolOption" href="#">Tools</a></li>
-    </ul>
-  </div>
-
-  <div class="searchResults">
-    <p class="numberOfResults">About 142,000,000 results (0.48 seconds)</p>
-    <div class="result">
-      <div class="result-item">
-        <a class="link" href="#">https://...</a>
-        <h2><a href="#">Search Result Title</a></h2>
-        <p><span></span>Description</p>
-      </div>
-      <div class="result-visualisation">
-        <img src="/img/test.png" alt="test">
-      </div>
-    </div>
-    <div class="result">
-      <div class="result-item">
-        <a class="link" href="#">https://...</a>
-        <h2><a href="#">Search Result Title</a></h2>
-        <p><span></span>Description</p>
-      </div>
-      <div class="result-visualisation">
-        <img src="/img/test.png" alt="test">
-      </div>
-    </div>
-    <div class="result">
-      <div class="result-item">
-        <a class="link" href="#">https://...</a>
-        <h2><a href="#">Search Result Title</a></h2>
-        <p><span></span>Description</p>
-      </div>
-      <div class="result-visualisation">
-        <img src="/img/test.png" alt="test">
-      </div>
-    </div>
-    <div class="result">
-      <div class="result-item">
-        <a class="link" href="#">https://...</a>
-        <h2><a href="#">Search Result Title</a></h2>
-        <p><span></span>Description</p>
-      </div>
-      <div class="result-visualisation">
-        <img src="/img/test.png" alt="test">
-      </div>
-    </div>
-  </div>
-
-  <div class="footer">
-  </div>
+  <h1>Index</h1>
+  <h2>Prestudy</h2>
+  <ul>
+    <li><a href="/prestudy/nightingale-rose.html">Nightingale-Rose-Chart</a></li>
+    <li><a href="/prestudy/nightingale-rose.html">Spider-Chart</a></li>
+    <li><a href="/prestudy/nightingale-rose.html">Bar-Chart</a></li>
+    <li><a href="/prestudy/nightingale-rose.html">Radial-Bar-Chart</a></li>
+    <li><a href="/prestudy/nightingale-rose.html">Halbkreis-Chart</a></li>
+  </ul>
 </body>
 </html>
