--- a/prestudy-nightingale-rose.html
+++ b/prestudy-nightingale-rose.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>How complex should credibility visualisations be?</title>
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
   <div class="header">
