--- a/prestudy-nightingale-rose.html
+++ b/prestudy-nightingale-rose.html
@@ -36,7 +36,7 @@
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
       <div class="result-visualisation">
-        <img src="/img/test.png" alt="test">
+        <img src="img/test.png" alt="test">
       </div>
     </div>
   </div>
