Added pages for other charts

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <h2>Prestudy</h2>
   <ul>
     <li><a href="prestudy-nightingale-rose.html">Nightingale-Rose-Chart</a></li>
-    <li><a href="prestudy-nightingale-rose.html">Spider-Chart</a></li>
-    <li><a href="prestudy-nightingale-rose.html">Bar-Chart</a></li>
-    <li><a href="prestudy-nightingale-rose.html">Radial-Bar-Chart</a></li>
-    <li><a href="prestudy-nightingale-rose.html">Halbkreis-Chart</a></li>
+    <li><a href="prestudy-spider.html">Spider-Chart</a></li>
+    <li><a href="prestudy-cartesian-bar.html">Cartesian-Bar-Chart</a></li>
+    <li><a href="prestudy-radial-bar.html">Radial-Bar-Chart</a></li>
+    <li><a href="#">Halbkreis-Chart</a></li>
   </ul>
 </body>
 </html>
