--- a/prestudy-spider.html
+++ b/prestudy-spider.html
@@ -9,21 +9,18 @@
 </head>
 <body>
   <div class="header">
-    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png" alt="Google Logo">
-    <input type="text" name="" value="search query">
-    
+    <a href="index.html"><img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png" alt="Google Logo"></a>
+    <input type="text" name="" value="can eating dates help manange iron deficiency anemia">
   </div>
 
   <div class="searchTools">
     <ul class="searchToolOptions">
-      <li class="left active"><a href="#">All</a></li>
-      <li class="left"><a class="searchToolOption" href="#">News</a></li>
-      <li class="left"><a class="searchToolOption" href="#">Videos</a></li>
-      <li class="left"><a class="searchToolOption" href="#">Shopping</a></li>
-      <li class="left"><a class="searchToolOption" href="#">Maps</a></li>
-      <li class="left"><a class="searchToolOption" href="#">More</a></li>
-      <li class="right"><a class="searchToolOption" href="#">Settings</a></li>
-      <li class="right"><a class="searchToolOption" href="#">Tools</a></li>
+      <li class="active"><a href="">All</a></li>
+      <li><a href="#">News</a></li>
+      <li><a href="#">Videos</a></li>
+      <li><a href="#">Shopping</a></li>
+      <li><a href="#">Maps</a></li>
+      <li><a href="#">More</a></li>
     </ul>
   </div>
 
