Replaced placeholder images
ver 1

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li><a href="prestudy-spider.html">Spider-Chart</a></li>
     <li><a href="prestudy-cartesian-bar.html">Cartesian-Bar-Chart</a></li>
     <li><a href="prestudy-radial-bar.html">Radial-Bar-Chart</a></li>
-    <li><a href="#">Halbkreis-Chart</a></li>
+    <li><a href="prestudy-ring.html">Ring-Chart</a></li>
   </ul>
 </body>
 </html>
