--- a/prestudy-ring.html
+++ b/prestudy-ring.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Radial-Bar-Chart</title>
+  <title>Ring-Chart</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -33,7 +33,7 @@
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
       <div class="result-visualisation">
-        <img src="img/pre-radial.png" alt="Visualisation">
+        <img src="img/pre-ring.png" alt="Visualisation">
       </div>
     </div>
   </div>
