--- a/prestudy-spider.html
+++ b/prestudy-spider.html
@@ -33,7 +33,7 @@
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
       <div class="result-visualisation">
-        <img src="img/placeholder-1-1.png" alt="Visualisation">
+        <img src="img/pre-spider.png" alt="Visualisation">
       </div>
     </div>
   </div>
