Added slider and feedback page

--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 </head>
 <body>
   <h1>Index</h1>
-  <h2>Prestudy</h2>
+  <h2>Pre-Study</h2>
   <ul>
     <li><a href="prestudy-nightingale-rose.html">Nightingale-Rose-Chart</a></li>
     <li><a href="prestudy-spider.html">Spider-Chart</a></li>
     <li><a href="prestudy-cartesian-bar.html">Cartesian-Bar-Chart</a></li>
     <li><a href="prestudy-radial-bar.html">Radial-Bar-Chart</a></li>
     <li><a href="prestudy-ring.html">Ring-Chart</a></li>
+  </ul>
+  <h2>Main-Study</h2>
+  <ul>
+    <li><a href="mainstudy-no-visualisation.html">No Visualisation</a></li>
+    <li><a href="mainstudy-simple.html">Simple Visualisation</a></li>
+    <li><a href="mainstudy-complex.html">Complex Visualisation</a></li>
   </ul>
 </body>
 </html>
