--- a/mainstudy-complex.html
+++ b/mainstudy-complex.html
@@ -33,9 +33,9 @@
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
       <div class="result-rating">
-        <img src="img/thumbs-down.png" alt="Thumbs Down">
+        <p>Not Credible</p>
         <input type="range" min="0" max="100" value="0" class="slider" id="myRange">        
-        <img src="img/thumbs-up.png" alt="Thumbs Up">
+        <p>Credible</p>
       </div>
       <div class="result-visualisation">
         <img src="img/pre-nightingale.png" alt="Visualisation">
@@ -48,9 +48,9 @@
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
       <div class="result-rating">
-        <img src="img/thumbs-down.png" alt="Thumbs Down">
+        <p>Not Credible</p>
         <input type="range" min="0" max="100" value="0" class="slider" id="myRange">        
-        <img src="img/thumbs-up.png" alt="Thumbs Up">
+        <p>Credible</p>
       </div>
       <div class="result-visualisation">
         <img src="img/pre-nightingale.png" alt="Visualisation">
@@ -63,9 +63,9 @@
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
       <div class="result-rating">
-        <img src="img/thumbs-down.png" alt="Thumbs Down">
+        <p>Not Credible</p>
         <input type="range" min="0" max="100" value="0" class="slider" id="myRange">        
-        <img src="img/thumbs-up.png" alt="Thumbs Up">
+        <p>Credible</p>
       </div>
       <div class="result-visualisation">
         <img src="img/pre-nightingale.png" alt="Visualisation">
@@ -78,9 +78,9 @@
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
       <div class="result-rating">
-        <img src="img/thumbs-down.png" alt="Thumbs Down">
+        <p>Not Credible</p>
         <input type="range" min="0" max="100" value="0" class="slider" id="myRange">        
-        <img src="img/thumbs-up.png" alt="Thumbs Up">
+        <p>Credible</p>
       </div>
       <div class="result-visualisation">
         <img src="img/pre-nightingale.png" alt="Visualisation">
@@ -93,9 +93,9 @@
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
       <div class="result-rating">
-        <img src="img/thumbs-down.png" alt="Thumbs Down">
+        <p>Not Credible</p>
         <input type="range" min="0" max="100" value="0" class="slider" id="myRange">        
-        <img src="img/thumbs-up.png" alt="Thumbs Up">
+        <p>Credible</p>
       </div>
       <div class="result-visualisation">
         <img src="img/pre-nightingale.png" alt="Visualisation">
@@ -108,9 +108,9 @@
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
       <div class="result-rating">
-        <img src="img/thumbs-down.png" alt="Thumbs Down">
+        <p>Not Credible</p>
         <input type="range" min="0" max="100" value="0" class="slider" id="myRange">        
-        <img src="img/thumbs-up.png" alt="Thumbs Up">
+        <p>Credible</p>
       </div>
       <div class="result-visualisation">
         <img src="img/pre-nightingale.png" alt="Visualisation">
@@ -123,9 +123,9 @@
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
       <div class="result-rating">
-        <img src="img/thumbs-down.png" alt="Thumbs Down">
+        <p>Not Credible</p>
         <input type="range" min="0" max="100" value="0" class="slider" id="myRange">        
-        <img src="img/thumbs-up.png" alt="Thumbs Up">
+        <p>Credible</p>
       </div>
       <div class="result-visualisation">
         <img src="img/pre-nightingale.png" alt="Visualisation">
@@ -138,9 +138,9 @@
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
       <div class="result-rating">
-        <img src="img/thumbs-down.png" alt="Thumbs Down">
+        <p>Not Credible</p>
         <input type="range" min="0" max="100" value="0" class="slider" id="myRange">        
-        <img src="img/thumbs-up.png" alt="Thumbs Up">
+        <p>Credible</p>
       </div>
       <div class="result-visualisation">
         <img src="img/pre-nightingale.png" alt="Visualisation">
@@ -153,9 +153,9 @@
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
       <div class="result-rating">
-        <img src="img/thumbs-down.png" alt="Thumbs Down">
-        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">        
-        <img src="img/thumbs-up.png" alt="Thumbs Up">
+        <p>Not Credible</p>
+        <input type="range" min="0" max="100" value="0" class="slider" id="myRange">        
+        <p>Credible</p>
       </div>
       <div class="result-visualisation">
         <img src="img/pre-nightingale.png" alt="Visualisation">
@@ -168,9 +168,9 @@
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
       <div class="result-rating">
-        <img src="img/thumbs-down.png" alt="Thumbs Down">
+        <p>Not Credible</p>
         <input type="range" min="0" max="100" value="0" class="slider" id="myRange">        
-        <img src="img/thumbs-up.png" alt="Thumbs Up">
+        <p>Credible</p>
       </div>
       <div class="result-visualisation">
         <img src="img/pre-nightingale.png" alt="Visualisation">
