--- a/mainstudy-simple.html
+++ b/mainstudy-simple.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ring-Chart</title>
+  <title>Complex Visualisation</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -32,11 +32,23 @@
         <h2><a href="#">Proven Tips About Dates For Anemia(How to eat Dates?)</a></h2>
         <p><span></span>29.07.2019 - dates have a lot of iron and vitamin B12. These materials are very useful in the treatment of anemia. Women who consume dates fruites instead of ...</p>
       </div>
+      <div class="result-rating">
+        <p>Not Credible</p>
+        <input type="range" min="0" max="100" value="0" class="slider" id="myRange">        
+        <p>Credible</p>
+      </div>
       <div class="result-visualisation">
-        <img src="img/pre-ring.png" alt="Visualisation">
+        <img src="img/pre-nightingale.png" alt="Visualisation">
       </div>
     </div>
+    
   </div>
 
+  <div class="nextPage">
+    <a href="mainstudy-complex-eval.html">Go to Next Page</a>
+  </div>
+
+  <div class="footer">
+  </div>
 </body>
 </html>
