--- a/mainstudy-complex-comparison.html
+++ b/mainstudy-complex-comparison.html
@@ -38,7 +38,7 @@
         <p>Credible</p>
       </div>
       <div class="result-visualisation">
-        <img src="img/spider-noscale.png" alt="Visualisation">
+        <img src="img/spider-scale.png" alt="Visualisation">
       </div>
     </div>
     <div class="result">
@@ -53,7 +53,7 @@
         <p>Credible</p>
       </div>
       <div class="result-visualisation">
-        <img src="img/spider-noscale.png" alt="Visualisation">
+        <img src="img/spider-scale.png" alt="Visualisation">
       </div>
     </div>
     <div class="result">
@@ -68,7 +68,7 @@
         <p>Credible</p>
       </div>
       <div class="result-visualisation">
-        <img src="img/spider-noscale.png" alt="Visualisation">
+        <img src="img/spider-scale.png" alt="Visualisation">
       </div>
     </div>
     <div class="result">
@@ -83,7 +83,7 @@
         <p>Credible</p>
       </div>
       <div class="result-visualisation">
-        <img src="img/spider-noscale.png" alt="Visualisation">
+        <img src="img/spider-scale.png" alt="Visualisation">
       </div>
     </div>
     <div class="result">
@@ -98,7 +98,7 @@
         <p>Credible</p>
       </div>
       <div class="result-visualisation">
-        <img src="img/spider-noscale.png" alt="Visualisation">
+        <img src="img/spider-scale.png" alt="Visualisation">
       </div>
     </div>
     <div class="result">
@@ -113,7 +113,7 @@
         <p>Credible</p>
       </div>
       <div class="result-visualisation">
-        <img src="img/spider-noscale.png" alt="Visualisation">
+        <img src="img/spider-scale.png" alt="Visualisation">
       </div>
     </div>
     <div class="result">
@@ -128,7 +128,7 @@
         <p>Credible</p>
       </div>
       <div class="result-visualisation">
-        <img src="img/spider-noscale.png" alt="Visualisation">
+        <img src="img/spider-scale.png" alt="Visualisation">
       </div>
     </div>
     <div class="result">
@@ -143,7 +143,7 @@
         <p>Credible</p>
       </div>
       <div class="result-visualisation">
-        <img src="img/spider-noscale.png" alt="Visualisation">
+        <img src="img/spider-scale.png" alt="Visualisation">
       </div>
     </div>
     <div class="result">
@@ -158,7 +158,7 @@
         <p>Credible</p>
       </div>
       <div class="result-visualisation">
-        <img src="img/spider-noscale.png" alt="Visualisation">
+        <img src="img/spider-scale.png" alt="Visualisation">
       </div>
     </div>
     <div class="result">
@@ -173,7 +173,7 @@
         <p>Credible</p>
       </div>
       <div class="result-visualisation">
-        <img src="img/spider-noscale.png" alt="Visualisation">
+        <img src="img/spider-scale.png" alt="Visualisation">
       </div>
     </div>
   </div>
