added snippet htmls

--- a/index.html
+++ b/index.html
@@ -18,10 +18,41 @@
     <li><a href="prestudy-ring.html">Ring-Chart</a></li>
   </ul>
   <h2>Main-Study</h2>
+  <h3>Topic 104: Does duct tape work for wart removal?</h3>
   <ul>
-    <li><a href="mainstudy-no-visualisation.html">No Visualisation</a></li>
-    <li><a href="mainstudy-simple.html">Simple Visualisation</a></li>
-    <li><a href="mainstudy-complex.html">Complex Visualisation</a></li>
+    <li><a href="104-no-visualisation.html">No Visualisation</a></li>
+    <li><a href="104-simple.html">Simple Visualisation</a></li>
+    <li><a href="104-complex.html">Complex Visualisation</a></li>
+  </ul>
+  <h3>Topic 110: Will taking birth control pills treat an ovarian cyst?</h3>
+  <ul>
+    <li><a href="104-no-visualisation.html">No Visualisation</a></li>
+    <li><a href="104-simple.html">Simple Visualisation</a></li>
+    <li><a href="104-complex.html">Complex Visualisation</a></li>
+  </ul>
+  <h3>Topic 114: Can applying vitamin E cream remove skin scars?</h3>
+  <ul>
+    <li><a href="104-no-visualisation.html">No Visualisation</a></li>
+    <li><a href="104-simple.html">Simple Visualisation</a></li>
+    <li><a href="104-complex.html">Complex Visualisation</a></li>
+  </ul>
+  <h3>Topic 122: Does Aleve relieve migraine headaches?</h3>
+  <ul>
+    <li><a href="104-no-visualisation.html">No Visualisation</a></li>
+    <li><a href="104-simple.html">Simple Visualisation</a></li>
+    <li><a href="104-complex.html">Complex Visualisation</a></li>
+  </ul>
+  <h3>Topic 137: Will drinking vinegar dissolve a stuck fish bone?</h3>
+  <ul>
+    <li><a href="104-no-visualisation.html">No Visualisation</a></li>
+    <li><a href="104-simple.html">Simple Visualisation</a></li>
+    <li><a href="104-complex.html">Complex Visualisation</a></li>
+  </ul>
+  <h3>Topic 139: Can copper bracelets reduce the pain of arthritis?</h3>
+  <ul>
+    <li><a href="104-no-visualisation.html">No Visualisation</a></li>
+    <li><a href="104-simple.html">Simple Visualisation</a></li>
+    <li><a href="104-complex.html">Complex Visualisation</a></li>
   </ul>
 </body>
 </html>
