--- a/aufklaerung-richtiger-text-muss-noch-rein.html
+++ b/aufklaerung-richtiger-text-muss-noch-rein.html
@@ -1,139 +1,90 @@
 <!DOCTYPE html>
-<!-- saved from url=(0027)https://ib-survey.deno.dev/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <!-- <base href="/client/html/"> -->
-    <!--<base href="/client/html/">--><base href=".">
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><base href=".">
     <script src="./aufklaerung_files/startController.js.download" type="module"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./aufklaerung_files/start.css">
+    <link rel="stylesheet" type="text/css" href="css/aufklaerung.css">
     
 </head>
 
 <body>
-    <h1>
-        Visuelle Repräsentation der Glaubwürdigkeit von Suchergebnissen
-    </h1>
-
-    <h2>Einverständniserklärung zur Aufklärung über die Teilnahme</h2>
+    <h1>Vergleich von Information Credibility Visualisierungen</h1>
+    <h2>Einverständniserklärung zur Teilnahme</h2>
     <p>
-        Sie sind eingeladen an der von Quirin Wittmann, Alexander Weichart, Brooke Pintsuk, Samuel Roeben und PD Dr.
-        David Elsweiler initiierten und geleiteten Online-Studie "<b>Visuelle Repräsentation der Glaubwürdigkeit von
-            Suchergebnissen</b>" teilzunehmen. <br>
-        Die Forschung wird von der Universität Regensburg betreut.
+        Vielen Dank, dass Sie an der Online-Studie <b>Vergleich von Information Credibility Visualisierungen</b>, im
+        Rahmen des Seminars „Informationsverhalten verstehen“ teilnehmen.
     </p>
-
     <b>Bitte beachten Sie:</b>
     <ul>
         <li>
-            Ihre Teilnahme ist komplett freiwillig
+            Ihre Teilnahme ist absolut freiwillig.
         </li>
         <li>
-            Für die Teilnahme an dieser Studie werden gute Englischkenntnisse benötigt
+            Die Online-Studie wird ungefähr 30 - 60 Minuten dauern.
         </li>
         <li>
-            Die Online-Studie dauert etwa 30 Minuten
+            Wir werden personenbezogene Daten (Alter, Geschlecht, etc.) erfassen; diese und alle weiteren Angaben sind vertraulich und anonymisiert und können nicht mit Ihnen in Verbindung gebracht werden.
         </li>
         <li>
-            Wir werden persönliche Daten zur Demographie (Alter, Geschlecht, etc.) erheben
+            Ergebnisse aus dieser Studie können zu wissenschaftlichen Zwecken weiterverarbeitet und veröffentlicht werden.
         </li>
     </ul>
     <p>
-        Wir können unsere Ergebnisse aus dieser und anderen Sitzungen in unseren Berichten veröffentlichen, aber alle
-        diese
-        Berichte werden vertraulich sein und weder Ihren Namen enthalten noch mit Ihrer Identität in Verbindung gebracht
-        werden können.
+        Bitte nehmen Sie sich so viel Zeit wie Sie brauchen, um die Einwilligungserklärung sorgfältig zu lesen.
     </p>
+    <b>1. Zweck und Ziel dieser Studie</b>
     <p>
-        Wir können unsere Ergebnisse aus dieser und anderen Sitzungen in unseren Berichten veröffentlichen, aber alle
-        diese Berichte werden vertraulich sein und weder Ihren Namen enthalten noch mit Ihrer Identität in Verbindung
-        gebracht werden können.
-        Wenn Sie Fragen oder Beschwerden zum gesamten Einwilligungsprozess dieser Studie oder Ihren Rechten als
-        Forschungsgegenstand haben, wenden Sie sich bitte an PD Dr. David Elsweiler (E-Mail:
-        <a href="mailto:david.elsweiler@sprachlit.uni-regensburg.de">david.elsweiler@sprachlit.uni-regensburg.de</a>).
-        Sie sollten die folgenden Informationen sorgfältig lesen. Bitte
-        nehmen Sie sich so viel Zeit wie nötig, um das Einwilligungsformular zu lesen.
+        Es soll Verständnis über verschiedene Komplexitätslevel von Credibility Visualisierungen gewonnen werden. Ziel ist es, aufgrund der Ergebnisse dieser Studie zu verstehen, wie Visualisierungen Nutzer bei der Bestimmung der Glaubwürdigkeit von Informationsquellen unterstützen können. Ihre Teilnahme hilft uns, dieses Ziel zu erreichen. Die Ergebnisse dieser Forschung können präsentiert oder veröffentlicht werden.
     </p>
-
-    <b>Zweck und Ziel dieser Studie</b>
+    <b>2. Teilnahme und Vergütung</b>
     <p>
-        Ziel dieser Studie ist es ein besseres Verständnis dafür zu bekommen, wie Visualisierungen bei Suchanfragen die
-        Wahrnehmung von Suchergebnissen beeinflussen.
+        Ihre Teilnahme an dieser Online-Studie ist vollkommen freiwillig. Sie werden eine von etwa 30 Personen sein, die für diese Studie befragt werden. Sie können die Teilnahme jederzeit ohne Angabe von Gründen und ohne nachteilige Folgen abbrechen oder sich von der Teilnahme abmelden. Die Beantwortung von Fragen, die Ihnen unangenehm sind oder die Sie nicht beantworten möchten, können Sie verweigern.
     </p>
-
-
-    <b>Beteiligung und Vergütung</b>
+    <b>3. Mögliche Risiken und Vorteile</b>
     <p>
-        Ihre Teilnahme an dieser Online-Studie ist völlig freiwillig. Sie werden eine von etwa 30-50 Personen sein, die
-        für diese Forschung befragt werden. Wenn sie ein Student der Medieninformatik oder Informationswissenschaft an
-        der Universität Regensburg können die Teilnahme jederzeit ohne Nachteil zurückziehen und einstellen. Wenn Sie
-        sich weigern an der Online-Studie teilzunehmen oder sich davon zurückziehen, wird niemand auf dem Campus
-        informiert. Sie können sich weigern Fragen zu beantworten, die Sie nicht beantworten möchten.
+        Mit dieser Online-Studie sind keine Risiken verbunden. Sollten jedoch im Laufe der Studie Unannehmlichkeiten auftreten, können Sie die Teilnahme beenden. Wir hoffen, dass die durch Ihre Teilnahme gewonnenen Informationen dazu beitragen können, die Forschung auf diesem Gebiet voranzubringen.
     </p>
-
-    <b>Verfahren</b>
+    <b>4. Datenschutz und Vertraulichkeit</b>
     <p>
-        Nach Bestätigung Ihrer Einwilligung werden Sie:
-        </p><ol>
-            <li>Die Online-Umfrage erhalten</li>
-            <li>Bewertungen für Suchergebnisse zum Thema Krankheiten und deren Behandlung abgeben</li>
-        </ol>
-        Das komplette Verfahren dieser Online-Studie dauert etwa 30 Minuten.
-    <p></p>
-
-    <b>Risiken und Nutzen</b>
-    <p>
-        Mit dieser Online-Studie sind keine Risiken verbunden. Unbehagen oder Unannehmlichkeiten sind gering und werden
-        wahrscheinlich nicht auftreten. Wenn irgendwelche Unannehmlichkeiten zu einem Problem werden, können Sie Ihre
-        Teilnahme einstellen. Sie werden nicht direkt durch die Teilnahme an dieser Online-Studie profitieren. Wir
-        hoffen, dass die Informationen aus Ihrer Teilnahme dazu beitragen können, die Forschung in diesem Bereich
-        voranzubringen.
+        Bei der Teilnahme werden personenbezogene Daten (Alter, Geschlecht, etc.) erfasst. Die Daten sind lediglich den an der Studie unmittelbar beteiligten Projektleitenden und den Versuchsleitenden zugänglich. Alle Daten werden streng vertraulich gehandhabt.
     </p>
-
-    <b>Datenschutz und Vertraulichkeit</b>
+    <b>5. Fragen zur Studie</b>
     <p>
-        Personenbezogene Daten (Alter, Geschlecht etc.) werden während der Teilnahme erfasst. Der Forscher wird Sie
-        nicht mit Ihrem Namen in Berichten identifizieren und dafür die Informationen aus dieser Online-Studie
-        verwenden. Ihre Anonymität als männlicher oder weiblicher Teilnehmer an dieser Online-Studie bleibt sicher und
-        verschlüsselt. Alle Daten, die Sie in dieser Online-Studie angeben, werden in Übereinstimmung mit der
-        Datenschutz-Grundverordnung (DSGVO) der Europäischen Union (EU) anonymisiert veröffentlicht und vertraulich
-        behandelt. In allen Fällen unterliegt die Verwendung von Aufzeichnungen und Daten der DSGVO. Fakultät und
-        Administratoren vom Campus haben keinen Zugriff auf Rohdaten oder Transkripte. Diese Vorsichtsmaßnahme
-        verhindert, dass Ihre individuellen Kommentare negative Auswirkungen haben. Diese Webseite verwendet Cookies und
-        andere Tracking-Technologien, um die Forschung durchzuführen, die Benutzererfahrung zu verbessern, die
-        Fähigkeit, mit dem System zu interagieren und zusätzliche Inhalte von Dritten bereitzustellen. Trotz
-        sorgfältiger inhaltlicher Kontrolle übernehmen die Forscher keine Haftung für Schäden, die direkt oder indirekt
-        aus der Nutzung dieser Online-Anwendung entstehen. Alle Aufzeichnungen können von niemandem außerhalb dieses
-        Forschungsprojekts eingesehen werden, es sei denn, Sie haben ein separates Genehmigungsformular unterschrieben,
-        das uns die Verwendung erlaubt. Die Aufzeichnungen werden nach dem Ende der Forschung nach Bedarf von der
-        Förderorganisation zerstört oder wenn Sie den Forscher kontaktieren, um sie zerstören zu lassen. Wie bei jeder
-        Veröffentlichung oder einer Internet-bezogenen-Aktivität, ist das Risiko einer Verletzung der Vertraulichkeit
-        immer möglich. Nach der DSGVO informieren die Forscher die Teilnehmer:innen, wenn eine Verletzung vertraulicher
-        Daten festgestellt wurde.
-    </p>
-
-    <b>Studiengestalter</b>
-    <p>
-        Wenn Sie Fragen oder Bedenken bezüglich dieser Forschung haben, wenden Sie sich bitte an:
-    </p>
-
-    <p>
-        Quirin Wittmann:<br>
-        <a href="mailto:quirin.wittmann@stud.uni-regensburg.de">quirin.wittmann@stud.uni-regensburg.de</a>
-        <br>
-        Alexander Weichart:<br>
-        <a href="mailto:alexander.weichart@stud.uni-regensburg.de">alexander.weichart@stud.uni-regensburg.de</a>
-        <br>
-        Brooke Pintsuk:<br>
-        <a href="mailto:brooke.pintsukt@stud.uni-regensburg.de">brooke.pintsukt@stud.uni-regensburg.de</a>
-        <br>
-        Samuel Roeben:<br>
-        <a href="mailto:samuel.roeben@stud.uni-regensburg.de">samuel.roeben@stud.uni-regensburg.de</a>
-        <br>
-        PD Dr. David Elsweiler:<br>
+        Wenn Sie Fragen oder Bedenken bezüglich der Studie haben, wenden Sie sich bitte an:<br>
+        PD Dr. David Elsweiler<br>
+        Tel.: 0941/943 4165<br>
         <a href="mailto:david.elsweiler@sprachlit.uni-regensburg.de">david.elsweiler@sprachlit.uni-regensburg.de</a>
-        <br>
     </p>
+    <h2>Einverständniserklärung</h2>
+    <p>
+        Hiermit erkläre ich, dass ich die Einverständniserklärung zur Studie
+    </p>
+    <p>„Vergleich von Information Credibility Visualisierungen“</p>
+    <p>erhalten habe.</p>
+    <ul>
+        <li>
+            Ich wurde ausreichend mündlich und/oder schriftlich über die wissenschaftliche Untersuchung informiert.
+        </li>
+        <li>
+            Es liegen derzeit keine gesundheitlichen Einschränkungen vor, die meiner Teilnahme an der Studie
+            entgegenstehen. Sollten solche Einschränkungen im Laufe der Studie auftreten, kann ich diese
+            ohne Folgen abbrechen.
+        </li>
+        <li>
+            Ich erkläre mich bereit, dass im Rahmen die Studie Daten über mich gesammelt und anonymisiert aufgezeichnet werden. Folgende Daten werden anonymisiert gespeichert: Demographische Angaben, Antworten der Feedback-/Bewertungsmöglichkeiten. <br>
+            Die Daten dürfen im Rahmen des Seminars zu wissenschaftlichen Zwecken weiterverarbeitet werden. Meine persönlichen Daten unterliegen dem Datenschutzgesetz (DSGVO).
+        </li>
+        <li>
+            Ich weiß, dass ich jederzeit meine Einverständniserklärung ohne Angabe von Gründen widerrufen kann, ohne, dass dies für mich nachteilige Folgen hat.
+        </li>
+        <li>
+            Mit der vorstehend geschilderten Vorgehensweise bin ich einverstanden und bestätige dies durch das Klicken auf <b>Weiter</b>.
+        </li>
+    </ul>
+
+
+
+
 
     <input type="checkbox" name="Einverständniserklärung" onclick="onCheckBoxClicked(event)">
     <label for="0">Ich habe die Einverständniserklärung zur Aufklärung über die Teilnahme sorgfältig durchgelesen und
