--- a/index.html
+++ b/index.html
@@ -18,12 +18,29 @@
     <li><a href="prestudy-ring.html">Ring-Chart</a></li>
   </ul>
   <h2>Main-Study</h2>
-  <h3>Topic 104: Does duct tape work for wart removal?</h3>
-  <ul>
-    <li><a href="no-visualisation.html">No Visualisation</a></li>
-    <li><a href="simple.html">Simple Visualisation</a></li>
-    <li><a href="complex.html">Complex Visualisation</a></li>
-  </ul>
-  </ul>
+    <h3>No Visualisations</h3>
+      <ul>
+        <li><a href="study-no-vis-01.html">No Visualisation</a></li>
+      </ul>
+    <h3>Simple Visualisations</h3>
+      <ul>
+        <li><a href="study-simple-01.html">Simple Visualisation 1</a></li>
+      </ul>
+    <h3>Complex Visualisations</h3>
+      <ul>
+        <li><a href="study-complex-01.html">Complex Visualisation 1</a></li>
+      </ul>
+      <h3>No Visualisations Feedback</h3>
+      <ul>
+        <li><a href="study-feedback-no-vis-01.html">No Visualisation</a></li>
+      </ul>
+    <h3>Simple Visualisations Feedback</h3>
+      <ul>
+        <li><a href="study-feedback-simple-01.html">Simple Visualisation 1</a></li>
+      </ul>
+    <h3>Complex Visualisations Feedback</h3>
+      <ul>
+        <li><a href="study-feedback-complex-01.html">Complex Visualisation 1</a></li>
+      </ul>
 </body>
 </html>
